# fitia-exercise

./: .env.example  README.md  docker-compose.yml  food.json  package.json  production.yml  pyproject.toml  tailwind.config.js
assets/css/: main.css
conf/: nginx.conf
dockerfiles/dev/: django.dockerfile  tailwind.dockerfile
dockerfiles/prod/: django.dockerfile  nginx.dockerfile
src/apps/core/: admin.py  choices.py  forms.py  interfaces.py  models.py  services.py  utils.py  views.py
src/apps/core/management/commands/: get_food.py
src/apps/core/migrations/: 0001_initial.py  0002_alter_food_external_id.py  0003_food_emoji.py  0004_remove_food_emoji.py
src/apps/users/: admin.py  forms.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/config/: urls.py
src/config/settings/: base.py  dev.py  prod.py
src/locale/es/LC_MESSAGES/: django.mo  django.po
src/static/css/: main.css
src/templates/: base.html
src/templates/core/: index.html  output.html
