[tool.poetry]
name = "fitia-exercise"
version = "0.1.0"
description = ""
authors = ["Francisco Mejía <fmejiaantezano@gmail.com>"]
license = "Unlicensed"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-environ = "^0.9.0"
django-allauth = "^0.51.0"
ortools = "^9.3.10497"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
